<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="AppUsageStatsHome"
            type="com.dewan.parentalcontrol.db.entity.AppUsageEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lb_header"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/hi_there"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lb_header_msg"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/most_used_app_lable"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lb_header" />

                <ImageView
                    android:id="@+id/img_app_logo"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lb_header_msg"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />

                <TextView
                    android:id="@+id/lb_sec"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/sec"
                    app:layout_constraintStart_toEndOf="@+id/img_app_logo"
                    app:layout_constraintTop_toTopOf="@+id/img_app_logo" />

                <TextView
                    android:id="@+id/txt_total_time_forground_sec"
                    style="@style/TextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""
                    app:layout_constraintStart_toEndOf="@+id/lb_sec"
                    app:layout_constraintTop_toTopOf="@+id/img_app_logo"
                    tools:text="100000" />

                <TextView
                    android:id="@+id/lb_min"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/min"
                    app:layout_constraintStart_toEndOf="@+id/img_app_logo"
                    app:layout_constraintTop_toBottomOf="@+id/lb_hr" />

                <TextView
                    android:id="@+id/txt_total_time_forground_min"
                    style="@style/TextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:layout_constraintStart_toEndOf="@+id/lb_sec"
                    app:layout_constraintTop_toBottomOf="@+id/txt_total_time_forground_sec"
                    tools:text="100" />

                <TextView
                    android:id="@+id/lb_hr"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/hr"
                    app:layout_constraintStart_toEndOf="@+id/img_app_logo"
                    app:layout_constraintTop_toBottomOf="@+id/lb_sec" />

                <TextView
                    android:id="@+id/txt_total_time_forground_hr"
                    style="@style/TextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="}"
                    app:layout_constraintStart_toEndOf="@+id/lb_sec"
                    app:layout_constraintTop_toBottomOf="@+id/txt_total_time_forground_min"
                    tools:text="10" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
